--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <title> CC- Project </title>
 </head>
 <body>
-<h1> Hello, This is my first COLUD COMPUTING PROJECT </h1>
+<h1> Hello, This is my first Cloud COMPUTING PROJECT </h1>
+  <p> This site is hosted on GitHub Pages.
+  </p>
 </body>
 </html>
